# xiao-remote-button

./: .gitignore
.github/: copilot-instructions.md
.github/agents/: app.agent.md  docs.agent.md  firmware.agent.md  refactor-cleaner.md  tdd.agent.md
.github/prompts/: app-new-screen.prompt.md  firmware-ble-service.prompt.md  firmware-new-component.prompt.md  firmware-new-sensor.prompt.md
.github/skills/ceedling-testing/: SKILL.md
.github/skills/firmware-coding/: SKILL.md
.github/skills/tdd-workflow/: SKILL.md
app/: README.md  pubspec.yaml
app/lib/: main.dart
app/linux/: CMakeLists.txt
app/test/: control_screen_test.dart  models_test.dart  widget_test.dart
docs/: architecture-app.md  architecture-firmware.md  design-driver.md  power-consumption-study.md  roadmap.app.md  roadmap.micro.md
micro/: .gitignore  CMakeLists.txt  README.md  prj.conf  project.ini  project.yml
micro/boards/: xiao_ble_nrf52840.overlay  xiao_ble_nrf52840_sense.overlay
micro/src/: main.c
micro/src/ble/: ble_relay_service.c  ble_relay_service.h
micro/src/led/: led.c  led.h  led_hal.c  led_hal.h
micro/src/relay/: relay.c  relay.h  relay_hal.c  relay_hal.h
micro/src/safety/: safety.c  safety.h  safety_hal.c  safety_hal.h
micro/src/timer/: relay_timer.c  relay_timer.h
micro/src/watchdog/: watchdog.c  watchdog.h
micro/tests/: test_led.c  test_placeholder.c  test_relay.c  test_relay_timer.c  test_safety.c
micro/tests/support/: support.h
scripts/: app-build.sh  app-run.sh  help.sh  micro-build.sh  micro-flash.sh  micro-monitor.sh  run-tests.sh
(+11 files in other folders)
